<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background1"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flyyyy"
        android:textSize="48sp"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@+id/highScoretext"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jouer"
        android:textSize="64sp"
        android:textColor="#000000"
        android:id="@+id/play"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="50sp"

        />


    <TextView
        android:id="@+id/highScoretext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/highscore"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:id="@+id/volumeCtrl"
        android:src="@drawable/ic_baseline_volume_up_24"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/editText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/editText1"
        app:layout_constraintLeft_toRightOf="@+id/editText1"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_0"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="24sp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
